--- a/FormCreate.resx
+++ b/FormCreate.resx
@@ -117,4 +117,64 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAGACoDAAAFgAAACgAAAAgAAAAQAAAAAEAGAAAAAAAAAAAAGAAAABgAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB/f3//////////////////////////////////
+        //////9/f3//AP//AP//AP//AP//AP//AP//AP//AP//AP//AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAB/f3////////////////////////////////////////9/f3//AP//AP//AP//AP//AP//
+        AP//AP//AP//AP//AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB/f3//////////////////
+        //////////////////////9/f3//AP//AP//AP//AP//AP//AP//AP//AP//AP//AP8AAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAB/f3////////////////////////////////////////9/f3//AP//
+        AP//AP//AP//AP//AP//AP//AP//AP//AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB/f3//
+        //////////////////////////////////////9/f3//AP//AP//AP//AP//AP//AP//AP//AP//AP//
+        AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB/f3//////////////////////////////////
+        //////9/f3//AP//AP//AP//AP//AP//AP//AP//AP//AP//AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAB/f3////////////////////////////////////////9/f3//AP//AP//AP//AP//AP//
+        AP//AP//AP//AP//AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB/f3//////////////////
+        //////////////////////9/f3//AP//AP//AP//AP//AP//AP//AP//AP//AP//AP8AAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAB/f3////////////////////////////////////////9/f3//AP//
+        AP//AP//AP//AP//AP//AP//AP//AP//AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB/f3//
+        //////////////////////////////////////9/f3//AP//AP//AP//AP//AP//AP//AP//AP//AP//
+        AP9/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/
+        f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f3//AAD/AAD/AAD/AAD/AAD/AAD/AAD/
+        AAD/AAD/AAB/f38AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB/f38AAP8AAP8AAP8AAP8AAP8A
+        AP8AAP8AAP8AAP8AAP//AAD/AAD/AAD/AAD/AAD/AAD/AAD/AAD/AAD/AAB/f38AAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAB/f38AAP8AAP8AAP8AAP8AAP8AAP8AAP8AAP8AAP8AAP//AAD/AAD/AAD/
+        AAD/AAD/AAD/AAD/AAD/AAD/AAB/f38AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB/f38AAP8A
+        AP8AAP8AAP8AAP8AAP8AAP8AAP8AAP8AAP//AAD/AAD/AAD/AAD/AAD/AAD/AAD/AAD/AAD/AAB/f38A
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB/f38AAP8AAP8AAP8AAP8AAP8AAP8AAP8AAP8AAP8A
+        AP//AAD/AAD/AAD/AAD/AAD/AAD/AAD/AAD/AAD/AAB/f38AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAB/f38AAP8AAP8AAP8AAP8AAP8AAP8AAP8AAP8AAP8AAP//AAD/AAD/AAD/AAD/AAD/AAD/AAD/
+        AAD/AAD/AAB/f38AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB/f38AAP8AAP8AAP8AAP8AAP8A
+        AP8AAP8AAP8AAP8AAP//AAD/AAD/AAD/AAD/AAD/AAD/AAD/AAD/AAD/AAB/f38AAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAB/f38AAP8AAP8AAP8AAP8AAP8AAP8AAP8AAP8AAP8AAP//AAD/AAD/AAD/
+        AAD/AAD/AAD/AAD/AAD/AAD/AAB/f38AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB/f38AAP8A
+        AP8AAP8AAP8AAP8AAP8AAP8AAP8AAP8AAP//AAD/AAD/AAD/AAD/AAD/AAD/AAD/AAD/AAD/AAB/f38A
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB/f38AAP8AAP8AAP8AAP8AAP8AAP8AAP8AAP8AAP8A
+        AP//AAD/AAD/AAD/AAD/AAD/AAD/AAD/AAD/AAD/AAB/f38AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAB/f38AAP8AAP8AAP8AAP8AAP8AAP8AAP8AAP8AAP8AAP9/f39/f39/f39/f39/f39/f39/f39/
+        f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/
+        f39/f39/f39/f39/f3///wD//wD//wD//wD//wD//wD//wD//wD//wD//wB/f38A/wAA/wAA/wAA/wAA
+        /wAA/wAA/wAA/wAA/wAA/wB/f38A//8A//8A//8A//8A//8A//8A//8A//8A//8A/////wD//wD//wD/
+        /wD//wD//wD//wD//wD//wD//wB/f38A/wAA/wAA/wAA/wAA/wAA/wAA/wAA/wAA/wAA/wB/f38A//8A
+        //8A//8A//8A//8A//8A//8A//8A//8A/////wD//wD//wD//wD//wD//wD//wD//wD//wD//wB/f38A
+        /wAA/wAA/wAA/wAA/wAA/wAA/wAA/wAA/wAA/wB/f38A//8A//8A//8A//8A//8A//8A//8A//8A//8A
+        /////wD//wD//wD//wD//wD//wD//wD//wD//wD//wB/f38A/wAA/wAA/wAA/wAA/wAA/wAA/wAA/wAA
+        /wAA/wB/f38A//8A//8A//8A//8A//8A//8A//8A//8A//8A/////wD//wD//wD//wD//wD//wD//wD/
+        /wD//wD//wB/f38A/wAA/wAA/wAA/wAA/wAA/wAA/wAA/wAA/wAA/wB/f38A//8A//8A//8A//8A//8A
+        //8A//8A//8A//8A/////wD//wD//wD//wD//wD//wD//wD//wD//wD//wB/f38A/wAA/wAA/wAA/wAA
+        /wAA/wAA/wAA/wAA/wAA/wB/f38A//8A//8A//8A//8A//8A//8A//8A//8A//8A/////wD//wD//wD/
+        /wD//wD//wD//wD//wD//wD//wB/f38A/wAA/wAA/wAA/wAA/wAA/wAA/wAA/wAA/wAA/wB/f38A//8A
+        //8A//8A//8A//8A//8A//8A//8A//8A/////wD//wD//wD//wD//wD//wD//wD//wD//wD//wB/f38A
+        /wAA/wAA/wAA/wAA/wAA/wAA/wAA/wAA/wAA/wB/f38A//8A//8A//8A//8A//8A//8A//8A//8A//8A
+        /////wD//wD//wD//wD//wD//wD//wD//wD//wD//wB/f38A/wAA/wAA/wAA/wAA/wAA/wAA/wAA/wAA
+        /wAA/wB/f38A//8A//8A//8A//8A//8A//8A//8A//8A//8A/////wD//wD//wD//wD//wD//wD//wD/
+        /wD//wD//wB/f38A/wAA/wAA/wAA/wAA/wAA/wAA/wAA/wAA/wAA/wB/f38A//8A//8A//8A//8A//8A
+        //8A//8A//8A//8A//8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA==
+</value>
+  </data>
 </root>
