--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -277,4 +277,7 @@
   <data name="rotateRight" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\rotateRight.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ADrive" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ADrive.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
