--- a/FormCPlay.resx
+++ b/FormCPlay.resx
@@ -117,7 +117,61 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="il3State.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>224, 16</value>
+  </metadata>
+  <data name="il3State.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADe
+        BQAAAk1TRnQBSQFMAgEBAgEAAYgBAQGIAQEBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABEAMAAQEBAAEgBgABEP8AXwABRQGqAdgB/wESAZQBzwH/AYABtAHMAf/DAAH/AwAB/wMAAf8DAAH/
+        JAABpwHXAewB/wEWAZwB1QH/ARYBlQHPAf8BnAG5AcYB/7cAAf8DAAH/AgAC/wIAAv8CAAL/AgAC/wMA
+        Af8DAAH/IAABKgGlAdgB/wEbAaYB3QH/ASMBmQHOAf8BswG/AcUB/68AAf8CAAL/AgAC/wIAAv8CAAL/
+        AgAC/wIAAv8CAAL/AgAC/wMAAf8cAAGGAccB5QH/ASgBuQHoAf8BGAGhAdkB/wE5AZ4BywH/AcIBxQHG
+        Af+rAAH/AgAC/wIAAv8CAAL/AgAC/wIAAv8CAAL/AgAC/wIAAv8DAAH/IAABGgGbAdMB/wEwAcsB9wH/
+        ARUBnAHWAf8BVwGlAckB/wPKAf+jAAH/AgAC/wIAAv8CAAL/AgAC/wIAAv8CAAL/AgAC/wIAAv8CAAL/
+        AgAC/wMAAf8cAAFhAbMB2QH/ASUBsAHiAf8BLgHLAfcB/wEUAZkB0wH/AXoBrgHGAf8DzQH/nwAB/wIA
+        Iv8CAAL/AwAB/yAAARMBlQHQAf8BNwHOAfcB/wEqAcYB9AH/ARYBlwHRAf8BmgG3AcQB/wPSAf+bAAH/
+        AgAi/wIAAv8DAAH/EAABLQGfAdMB/wESAZQBzwH/ARIBlAHPAf8BEgGUAc8B/wESAZQBzwH/ASIBqQHd
+        Af8BOgHXAf0B/wElAb4B8AH/ASIBmQHOAf8BswG/AcUB/wPXAf+XAAH/AgAC/wIAAv8CAAL/AgAC/wIA
+        Av8CAAL/AgAC/wIAAv8CAAL/AgAC/wMAAf8QAAFpAboB3gH/AV8B3QH0Af8BcAHtAfwB/wFrAesB/AH/
+        AV4B5gH8Af8BUQHgAf0B/wFEAdsB/QH/ATcB1gH+Af8BIAG3AesB/wE8AaEBzwH/AdIB1QHXAf+bAAH/
+        AgAC/wIAAv8CAAL/AgAC/wIAAv8CAAL/AgAC/wIAAv8DAAH/FAABpAHVAesB/wFCAcEB5gH/AXAB7QH8
+        Af8BQgHBAeYB/wESAZQBzwH/ARIBlAHPAf8BEgGUAc8B/wESAZQBzwH/ARIBlAHPAf8BEgGUAc8B/wFr
+        AbkB3AH/mwAB/wIAAv8CAAL/AgAC/wIAAv8CAAL/AgAC/wIAAv8CAAL/AwAB/xgAASMBpAHXAf8BcAHt
+        AfwB/wFwAe0B/AH/AUIBwQHmAf8BWwGmAcgB/wHFAcYBxwH/rwAB/wMAAf8CAAL/AgAC/wIAAv8CAAL/
+        AwAB/wMAAf8cAAEtAZ8B0wH/AV8B3QH0Af8BcAHtAfwB/wFwAe0B/AH/AUEBwQHmAf8BPwGfAcsB/wG3
+        AcEBxQH/swAB/wMAAf8DAAH/AwAB/yQAAWkBugHeAf8BQgHBAeYB/wFwAe0B/AH/AXAB7QH8Af8BcAHt
+        AfwB/wFAAcAB5gH/ASoBmgHNAf8BqgG8AcUB/wPQAf/gAAEjAaQB1wH/AXAB7QH8Af8BcAHtAfwB/wFw
+        Ae0B/AH/AXAB7QH8Af8BPgHAAeYB/wEfAZgBzwH/AaABwQHQAf8D3QH/3AABEgGUAc8B/wESAZQBzwH/
+        ARIBlAHPAf8BEgGUAc8B/wESAZQBzwH/ARIBlAHPAf8BEgGUAc8B/wEVAZUBzwH/AZMBygHjAf+MAAFC
+        AU0BPgcAAT4DAAEoAwABQAMAARADAAEBAQABAQUAAYAXAAP/AQAE/wQAAv8B4wH/BAAB/AE/AeEB/wQA
+        AfABDwHwAf8EAAHgAQcB8AF/BAAB4AEHAfgBPwQAAcABAwH4AR8EAAHAAQMB/AEPBAABwAEDAcABBwQA
+        AcABAwHAAQcEAAHgAQcBwAEHBAAB4AEHAeABfwQAAfABDwHgAT8EAAH8AT8B4AEPBAAC/wHwAQcEAAL/
+        AfABBwQACw==
+</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnPositionAlign.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAAK9JREFUOE+tjwEOxSAIQ3eXf/8zOlC6IBYx229SYcLeuqu1trVID2n5PNqOnxS9
+        WSuAu51ezGhSuYQ7zUB8jakCHicEKDrRDMwSnsDKhPFFBiNwcAbQJ2QArzhfEmKBOYrtwDoeK2QIR7Ed
+        WMd9ZRx//GVrHkUY+0B8FoEzgD6hF2AMCpUJoQiDE83ALKGqAAnlMCFUAU0zEAlZBXC304v5aTK7hMuM
+        mV5+Mb1873bdEUmPgcoSZjgAAAAASUVORK5CYII=
+</value>
+  </data>
+  <metadata name="toolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <metadata name="toolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <metadata name="dlgOpen.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>117, 17</value>
+  </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAICAAAAEAGACoDAAAFgAAACgAAAAgAAAAQAAAAAEAGAAAAAAAAAAAAGAAAABgAAAAAAAAAAAA
