--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -280,4 +280,10 @@
   <data name="ADrive" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ADrive.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="executeNo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\executeNo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="reuse" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\reuse.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
