Renew FormItems. Changed Items drawing.

--- a/FormADrive.resx
+++ b/FormADrive.resx
@@ -138,61 +138,21 @@
   </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        AAABAAEAICAAAAEAGACoDAAAFgAAACgAAAAgAAAAQAAAAAEAGAAAAAAAAAAAAGAAAABgAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB/f3//////////////////////////////////
-        //////9/f3//AP//AP//AP//AP//AP//AP//AP//AP//AP//AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAB/f3////////////////////////////////////////9/f3//AP//AP//AP//AP//AP//
-        AP//AP//AP//AP//AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB/f3//////////////////
-        //////////////////////9/f3//AP//AP//AP//AP//AP//AP//AP//AP//AP//AP8AAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAB/f3////////////////////////////////////////9/f3//AP//
-        AP//AP//AP//AP//AP//AP//AP//AP//AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB/f3//
-        //////////////////////////////////////9/f3//AP//AP//AP//AP//AP//AP//AP//AP//AP//
-        AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB/f3//////////////////////////////////
-        //////9/f3//AP//AP//AP//AP//AP//AP//AP//AP//AP//AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAB/f3////////////////////////////////////////9/f3//AP//AP//AP//AP//AP//
-        AP//AP//AP//AP//AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB/f3//////////////////
-        //////////////////////9/f3//AP//AP//AP//AP//AP//AP//AP//AP//AP//AP8AAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAB/f3////////////////////////////////////////9/f3//AP//
-        AP//AP//AP//AP//AP//AP//AP//AP//AP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB/f3//
-        //////////////////////////////////////9/f3//AP//AP//AP//AP//AP//AP//AP//AP//AP//
-        AP9/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/
-        f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f3//AAD/AAD/AAD/AAD/AAD/AAD/AAD/
-        AAD/AAD/AAB/f38AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB/f38AAP8AAP8AAP8AAP8AAP8A
-        AP8AAP8AAP8AAP8AAP//AAD/AAD/AAD/AAD/AAD/AAD/AAD/AAD/AAD/AAB/f38AAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAB/f38AAP8AAP8AAP8AAP8AAP8AAP8AAP8AAP8AAP8AAP//AAD/AAD/AAD/
-        AAD/AAD/AAD/AAD/AAD/AAD/AAB/f38AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB/f38AAP8A
-        AP8AAP8AAP8AAP8AAP8AAP8AAP8AAP8AAP//AAD/AAD/AAD/AAD/AAD/AAD/AAD/AAD/AAD/AAB/f38A
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB/f38AAP8AAP8AAP8AAP8AAP8AAP8AAP8AAP8AAP8A
-        AP//AAD/AAD/AAD/AAD/AAD/AAD/AAD/AAD/AAD/AAB/f38AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAB/f38AAP8AAP8AAP8AAP8AAP8AAP8AAP8AAP8AAP8AAP//AAD/AAD/AAD/AAD/AAD/AAD/AAD/
-        AAD/AAD/AAB/f38AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB/f38AAP8AAP8AAP8AAP8AAP8A
-        AP8AAP8AAP8AAP8AAP//AAD/AAD/AAD/AAD/AAD/AAD/AAD/AAD/AAD/AAB/f38AAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAB/f38AAP8AAP8AAP8AAP8AAP8AAP8AAP8AAP8AAP8AAP//AAD/AAD/AAD/
-        AAD/AAD/AAD/AAD/AAD/AAD/AAB/f38AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB/f38AAP8A
-        AP8AAP8AAP8AAP8AAP8AAP8AAP8AAP8AAP//AAD/AAD/AAD/AAD/AAD/AAD/AAD/AAD/AAD/AAB/f38A
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB/f38AAP8AAP8AAP8AAP8AAP8AAP8AAP8AAP8AAP8A
-        AP//AAD/AAD/AAD/AAD/AAD/AAD/AAD/AAD/AAD/AAB/f38AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAB/f38AAP8AAP8AAP8AAP8AAP8AAP8AAP8AAP8AAP8AAP9/f39/f39/f39/f39/f39/f39/f39/
-        f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/
-        f39/f39/f39/f39/f3///wD//wD//wD//wD//wD//wD//wD//wD//wD//wB/f38A/wAA/wAA/wAA/wAA
-        /wAA/wAA/wAA/wAA/wAA/wB/f38A//8A//8A//8A//8A//8A//8A//8A//8A//8A/////wD//wD//wD/
-        /wD//wD//wD//wD//wD//wD//wB/f38A/wAA/wAA/wAA/wAA/wAA/wAA/wAA/wAA/wAA/wB/f38A//8A
-        //8A//8A//8A//8A//8A//8A//8A//8A/////wD//wD//wD//wD//wD//wD//wD//wD//wD//wB/f38A
-        /wAA/wAA/wAA/wAA/wAA/wAA/wAA/wAA/wAA/wB/f38A//8A//8A//8A//8A//8A//8A//8A//8A//8A
-        /////wD//wD//wD//wD//wD//wD//wD//wD//wD//wB/f38A/wAA/wAA/wAA/wAA/wAA/wAA/wAA/wAA
-        /wAA/wB/f38A//8A//8A//8A//8A//8A//8A//8A//8A//8A/////wD//wD//wD//wD//wD//wD//wD/
-        /wD//wD//wB/f38A/wAA/wAA/wAA/wAA/wAA/wAA/wAA/wAA/wAA/wB/f38A//8A//8A//8A//8A//8A
-        //8A//8A//8A//8A/////wD//wD//wD//wD//wD//wD//wD//wD//wD//wB/f38A/wAA/wAA/wAA/wAA
-        /wAA/wAA/wAA/wAA/wAA/wB/f38A//8A//8A//8A//8A//8A//8A//8A//8A//8A/////wD//wD//wD/
-        /wD//wD//wD//wD//wD//wD//wB/f38A/wAA/wAA/wAA/wAA/wAA/wAA/wAA/wAA/wAA/wB/f38A//8A
-        //8A//8A//8A//8A//8A//8A//8A//8A/////wD//wD//wD//wD//wD//wD//wD//wD//wD//wB/f38A
-        /wAA/wAA/wAA/wAA/wAA/wAA/wAA/wAA/wAA/wB/f38A//8A//8A//8A//8A//8A//8A//8A//8A//8A
-        /////wD//wD//wD//wD//wD//wD//wD//wD//wD//wB/f38A/wAA/wAA/wAA/wAA/wAA/wAA/wAA/wAA
-        /wAA/wB/f38A//8A//8A//8A//8A//8A//8A//8A//8A//8A/////wD//wD//wD//wD//wD//wD//wD/
-        /wD//wD//wB/f38A/wAA/wAA/wAA/wAA/wAA/wAA/wAA/wAA/wAA/wB/f38A//8A//8A//8A//8A//8A
-        //8A//8A//8A//8A//8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAABAAEAEBAAAAEAGABoAwAAFgAAACgAAAAQAAAAIAAAAAEAGAAAAAAAAAAAAEgAAABIAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA==
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFBQUFBQUFBQUAAAAAAAAAAAAFBQUFBQUFBQUFBQUA
+        AAANDQ0AAAAAAAAAAAAAAAAAAAAFBQUAAAAAAAAAAAAAAAAAAAAFBQUFBQUAAAAAAAAAAAAFBQUAAAAA
+        AAAAAAAAAAAAAAAFBQUAAAAAAAAAAAAAAAAFBQUFBQUAAAAAAAAAAAAAAAAFBQUAAAAAAAAAAAAAAAAA
+        AAAFBQUAAAAAAAAAAAAFBQUFBQUAAAAAAAAAAAAAAAAFBQUAAAAAAAAAAAAAAAAAAAAFBQUFBQUFBQUF
+        BQUFBQUFBQUAAAAAAAAAAAAAAAAFBQUAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFBQUFBQUAAAAA
+        AAAAAAAAAAAFBQUAAAAAAAAAAAAAAAAAAAAAAAAFBQUAAAAAAAAFBQUFBQUAAAAAAAAAAAAAAAAFBQUA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAFBQUAAAAFBQUFBQUAAAAAAAAAAAAAAAAFBQUAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAFBQUAAAAFBQUFBQUAAAAAAAAAAAAFBQUAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAF
+        BQUFBQUFBQUFBQUAAAAFBQUAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD//wAA//8AAP//
+        AACOFwAA3zsAAO89AAD3PQAA8D0AAP89AAD7PQAA/T0AAP07AAD+FwAA//8AAP//AAD//wAA
 </value>
   </data>
 </root>
