--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -286,4 +286,19 @@
   <data name="reuse" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\reuse.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="content1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\content.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="fieldScanInfo16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\fieldScanInfo16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="fieldScanInfo32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\fieldScanInfo32.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="markRight" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\markRight.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="checkerHalfFilled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\checkerHalfFilled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
