--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -301,4 +301,13 @@
   <data name="checkerHalfFilled" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\checkerHalfFilled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="directionBoth" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\directionBoth.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="directionLeft" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\directionLeft.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="directionRight" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\directionRight.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
