--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -310,4 +310,13 @@
   <data name="directionRight" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\directionRight.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="alignRotation" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\alignRotation.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="checkerInvert" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\checkerInvert.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="gear" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\gear.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
