--- a/FormCPlay.resx
+++ b/FormCPlay.resx
@@ -120,19 +120,10 @@
   <metadata name="toolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnPositionAlign.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vAAADrwBlbxySQAAAK9JREFUOE+tjwEOxSAIQ3eXf/8zOlC6IBYx229SYcLeuqu1trVID2n5PNqOnxS9
-        WSuAu51ezGhSuYQ7zUB8jakCHicEKDrRDMwSnsDKhPFFBiNwcAbQJ2QArzhfEmKBOYrtwDoeK2QIR7Ed
-        WMd9ZRx//GVrHkUY+0B8FoEzgD6hF2AMCpUJoQiDE83ALKGqAAnlMCFUAU0zEAlZBXC304v5aTK7hMuM
-        mV5+Mb1873bdEUmPgcoSZjgAAAAASUVORK5CYII=
-</value>
-  </data>
   <metadata name="toolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="btnPositionXsub.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAGtJREFUOE+1
@@ -194,6 +185,18 @@
         wNv5f6BBOaDChRi+rJ0gXJCxHVADoYT5U4V8NgAKrAhK84TS7CPjAkS4jY//U7n+AAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="toolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="btnPositionAlign.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAAK9JREFUOE+tjwEOxSAIQ3eXf/8zOlC6IBYx229SYcLeuqu1trVID2n5PNqOnxS9
+        WSuAu51ezGhSuYQ7zUB8jakCHicEKDrRDMwSnsDKhPFFBiNwcAbQJ2QArzhfEmKBOYrtwDoeK2QIR7Ed
+        WMd9ZRx//GVrHkUY+0B8FoEzgD6hF2AMCpUJoQiDE83ALKGqAAnlMCFUAU0zEAlZBXC304v5aTK7hMuM
+        mV5+Mb1873bdEUmPgcoSZjgAAAAASUVORK5CYII=
+</value>
+  </data>
   <metadata name="il3State.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>224, 16</value>
   </metadata>
@@ -202,7 +205,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADe
-        BQAAAk1TRnQBSQFMAgEBAgEAAbABAgGwAQIBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        BQAAAk1TRnQBSQFMAgEBAgEAAbgBAgG4AQIBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
         AwABEAMAAQEBAAEgBgABEP8AXwABRQGqAdgB/wESAZQBzwH/AYABtAHMAf/DAAH/AwAB/wMAAf8DAAH/
         JAABpwHXAewB/wEWAZwB1QH/ARYBlQHPAf8BnAG5AcYB/7cAAf8DAAH/AgAC/wIAAv8CAAL/AgAC/wMA
         Af8DAAH/IAABKgGlAdgB/wEbAaYB3QH/ASMBmQHOAf8BswG/AcUB/68AAf8CAAL/AgAC/wIAAv8CAAL/
