Added ToolTip on  TopSpeed of CPlay.

--- a/FormCPlay.resx
+++ b/FormCPlay.resx
@@ -198,33 +198,33 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADe
-        BQAAAk1TRnQBSQFMAgEBAgEAAfgBAgH4AQIBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABEAMAAQEBAAEgBgABEP8AXwABRQGqAdgB/wESAZQBzwH/AYABtAHMAf/DAAH/AwAB/wMAAf8DAAH/
-        JAABpwHXAewB/wEWAZwB1QH/ARYBlQHPAf8BnAG5AcYB/7cAAf8DAAH/AgAC/wIAAv8CAAL/AgAC/wMA
-        Af8DAAH/IAABKgGlAdgB/wEbAaYB3QH/ASMBmQHOAf8BswG/AcUB/68AAf8CAAL/AgAC/wIAAv8CAAL/
-        AgAC/wIAAv8CAAL/AgAC/wMAAf8cAAGGAccB5QH/ASgBuQHoAf8BGAGhAdkB/wE5AZ4BywH/AcIBxQHG
-        Af+rAAH/AgAC/wIAAv8CAAL/AgAC/wIAAv8CAAL/AgAC/wIAAv8DAAH/IAABGgGbAdMB/wEwAcsB9wH/
-        ARUBnAHWAf8BVwGlAckB/wPKAf+jAAH/AgAC/wIAAv8CAAL/AgAC/wIAAv8CAAL/AgAC/wIAAv8CAAL/
-        AgAC/wMAAf8cAAFhAbMB2QH/ASUBsAHiAf8BLgHLAfcB/wEUAZkB0wH/AXoBrgHGAf8DzQH/nwAB/wIA
-        Iv8CAAL/AwAB/yAAARMBlQHQAf8BNwHOAfcB/wEqAcYB9AH/ARYBlwHRAf8BmgG3AcQB/wPSAf+bAAH/
-        AgAi/wIAAv8DAAH/EAABLQGfAdMB/wESAZQBzwH/ARIBlAHPAf8BEgGUAc8B/wESAZQBzwH/ASIBqQHd
-        Af8BOgHXAf0B/wElAb4B8AH/ASIBmQHOAf8BswG/AcUB/wPXAf+XAAH/AgAC/wIAAv8CAAL/AgAC/wIA
-        Av8CAAL/AgAC/wIAAv8CAAL/AgAC/wMAAf8QAAFpAboB3gH/AV8B3QH0Af8BcAHtAfwB/wFrAesB/AH/
-        AV4B5gH8Af8BUQHgAf0B/wFEAdsB/QH/ATcB1gH+Af8BIAG3AesB/wE8AaEBzwH/AdIB1QHXAf+bAAH/
-        AgAC/wIAAv8CAAL/AgAC/wIAAv8CAAL/AgAC/wIAAv8DAAH/FAABpAHVAesB/wFCAcEB5gH/AXAB7QH8
-        Af8BQgHBAeYB/wESAZQBzwH/ARIBlAHPAf8BEgGUAc8B/wESAZQBzwH/ARIBlAHPAf8BEgGUAc8B/wFr
-        AbkB3AH/mwAB/wIAAv8CAAL/AgAC/wIAAv8CAAL/AgAC/wIAAv8CAAL/AwAB/xgAASMBpAHXAf8BcAHt
-        AfwB/wFwAe0B/AH/AUIBwQHmAf8BWwGmAcgB/wHFAcYBxwH/rwAB/wMAAf8CAAL/AgAC/wIAAv8CAAL/
-        AwAB/wMAAf8cAAEtAZ8B0wH/AV8B3QH0Af8BcAHtAfwB/wFwAe0B/AH/AUEBwQHmAf8BPwGfAcsB/wG3
-        AcEBxQH/swAB/wMAAf8DAAH/AwAB/yQAAWkBugHeAf8BQgHBAeYB/wFwAe0B/AH/AXAB7QH8Af8BcAHt
-        AfwB/wFAAcAB5gH/ASoBmgHNAf8BqgG8AcUB/wPQAf/gAAEjAaQB1wH/AXAB7QH8Af8BcAHtAfwB/wFw
-        Ae0B/AH/AXAB7QH8Af8BPgHAAeYB/wEfAZgBzwH/AaABwQHQAf8D3QH/3AABEgGUAc8B/wESAZQBzwH/
-        ARIBlAHPAf8BEgGUAc8B/wESAZQBzwH/ARIBlAHPAf8BEgGUAc8B/wEVAZUBzwH/AZMBygHjAf+MAAFC
-        AU0BPgcAAT4DAAEoAwABQAMAARADAAEBAQABAQUAAYAXAAP/AQAE/wQAAv8B4wH/BAAB/AE/AeEB/wQA
-        AfABDwHwAf8EAAHgAQcB8AF/BAAB4AEHAfgBPwQAAcABAwH4AR8EAAHAAQMB/AEPBAABwAEDAcABBwQA
-        AcABAwHAAQcEAAHgAQcBwAEHBAAB4AEHAeABfwQAAfABDwHgAT8EAAH8AT8B4AEPBAAC/wHwAQcEAAL/
-        AfABBwQACw==
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADc
+        BQAAAk1TRnQBSQFMAgEBAgIAAQMBAAEDARABAAEQAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABQAMA
+        ARADAAEBAQABIAYAARD/AF8AAUUBqgHYAf8BEgGUAc8B/wGAAbQBzAH/wwAB/wMAAf8DAAH/AwAB/yQA
+        AacB1wHsAf8BFgGcAdUB/wEWAZUBzwH/AZwBuQHGAf+3AAH/AwAB/wIAAv8CAAL/AgAC/wIAAv8DAAH/
+        AwAB/yAAASoBpQHYAf8BGwGmAd0B/wEjAZkBzgH/AbMBvwHFAf+vAAH/AgAC/wIAAv8CAAL/AgAC/wIA
+        Av8CAAL/AgAC/wIAAv8DAAH/HAABhgHHAeUB/wEoAbkB6AH/ARgBoQHZAf8BOQGeAcsB/wHCAcUBxgH/
+        qwAB/wIAAv8CAAL/AgAC/wIAAv8CAAL/AgAC/wIAAv8CAAL/AwAB/yAAARoBmwHTAf8BMAHLAfcB/wEV
+        AZwB1gH/AVcBpQHJAf8DygH/owAB/wIAAv8CAAL/AgAC/wIAAv8CAAL/AgAC/wIAAv8CAAL/AgAC/wIA
+        Av8DAAH/HAABYQGzAdkB/wElAbAB4gH/AS4BywH3Af8BFAGZAdMB/wF6Aa4BxgH/A80B/58AAf8CACL/
+        AgAC/wMAAf8gAAETAZUB0AH/ATcBzgH3Af8BKgHGAfQB/wEWAZcB0QH/AZoBtwHEAf8D0gH/mwAB/wIA
+        Iv8CAAL/AwAB/xAAAS0BnwHTAf8BEgGUAc8B/wESAZQBzwH/ARIBlAHPAf8BEgGUAc8B/wEiAakB3QH/
+        AToB1wH9Af8BJQG+AfAB/wEiAZkBzgH/AbMBvwHFAf8D1wH/lwAB/wIAAv8CAAL/AgAC/wIAAv8CAAL/
+        AgAC/wIAAv8CAAL/AgAC/wIAAv8DAAH/EAABaQG6Ad4B/wFfAd0B9AH/AXAB7QH8Af8BawHrAfwB/wFe
+        AeYB/AH/AVEB4AH9Af8BRAHbAf0B/wE3AdYB/gH/ASABtwHrAf8BPAGhAc8B/wHSAdUB1wH/mwAB/wIA
+        Av8CAAL/AgAC/wIAAv8CAAL/AgAC/wIAAv8CAAL/AwAB/xQAAaQB1QHrAf8BQgHBAeYB/wFwAe0B/AH/
+        AUIBwQHmAf8BEgGUAc8B/wESAZQBzwH/ARIBlAHPAf8BEgGUAc8B/wESAZQBzwH/ARIBlAHPAf8BawG5
+        AdwB/5sAAf8CAAL/AgAC/wIAAv8CAAL/AgAC/wIAAv8CAAL/AgAC/wMAAf8YAAEjAaQB1wH/AXAB7QH8
+        Af8BcAHtAfwB/wFCAcEB5gH/AVsBpgHIAf8BxQHGAccB/68AAf8DAAH/AgAC/wIAAv8CAAL/AgAC/wMA
+        Af8DAAH/HAABLQGfAdMB/wFfAd0B9AH/AXAB7QH8Af8BcAHtAfwB/wFBAcEB5gH/AT8BnwHLAf8BtwHB
+        AcUB/7MAAf8DAAH/AwAB/wMAAf8kAAFpAboB3gH/AUIBwQHmAf8BcAHtAfwB/wFwAe0B/AH/AXAB7QH8
+        Af8BQAHAAeYB/wEqAZoBzQH/AaoBvAHFAf8D0AH/4AABIwGkAdcB/wFwAe0B/AH/AXAB7QH8Af8BcAHt
+        AfwB/wFwAe0B/AH/AT4BwAHmAf8BHwGYAc8B/wGgAcEB0AH/A90B/9wAARIBlAHPAf8BEgGUAc8B/wES
+        AZQBzwH/ARIBlAHPAf8BEgGUAc8B/wESAZQBzwH/ARIBlAHPAf8BFQGVAc8B/wGTAcoB4wH/jAABQgFN
+        AT4HAAE+AwABKAMAAUADAAEQAwABAQEAAQEFAAGAFwAD/wEABP8EAAL/AeMB/wQAAfwBPwHhAf8EAAHw
+        AQ8B8AH/BAAB4AEHAfABfwQAAeABBwH4AT8EAAHAAQMB+AEfBAABwAEDAfwBDwQAAcABAwHAAQcEAAHA
+        AQMBwAEHBAAB4AEHAcABBwQAAeABBwHgAX8EAAHwAQ8B4AE/BAAB/AE/AeABDwQAAv8B8AEHBAAC/wHw
+        AQcEAAs=
 </value>
   </data>
   <metadata name="dlgOpen.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
